# shared-python-utils

./: .gitignore  LICENSE  README.md  check.sh  pyproject.toml
.github/workflows/: test.yml
src/: __init__.py
src/d_util/: __init__.py
src/d_util/objects/: DBaseModel.py
src/d_util/trading_objects/: Calendar.py  Candle.py
src/d_util/utils/: logger.py
src/objects/: DBaseModel.py  DDateTime.py  Singleton.py
tests/baseline/test_infra/test_string_cmp/: test_stdout_1.baseline  test_stdout_2.baseline
tests/baseline/test_obj/test_ddate/: test_ddate_create.baseline  test_ddate_create_from_str.baseline  test_ddate_init.baseline  test_ddate_serialization.baseline  test_ddate_serialize_deserialize.baseline  test_ddate_today_1.baseline  test_ddate_today_2.baseline  test_ddate_today_3.baseline  test_ddate_today_4.baseline  test_deserialize_ddate_pydantic_attribute.baseline  test_serialize_ddate_pydantic_attribute.baseline
tests/baseline/test_obj/test_ddatetime/: test_ddatetime_create.baseline  test_ddatetime_get_raw_datetime.baseline  test_ddatetime_init.baseline  test_ddatetime_init2.baseline  test_ddatetime_init4.baseline  test_deserialize_ddatetime_pydantic_attribute.baseline  test_now_1.baseline  test_now_2.baseline  test_now_3.baseline  test_now_4.baseline  test_serialize_ddatetime.baseline  test_serialize_ddatetime_pydantic_attribute.baseline
tests/baseline/test_util/test_logger/: test_logger_colors.baseline
tests/test_cases/test_infra/: test_string_cmp.py
tests/test_cases/test_obj/: test_ddate.py  test_ddatetime.py  test_singleton.py
tests/test_cases/test_trading_obj/: test_candle.py  test_market_calendar.py
tests/utils/: file_cmp_test.py
