[project]
name = "shared-python-utils"
version = "0.1.0"
description = "Util package shared by my python projects. It consists of some base classes, my basic test framework, and a lot of linting/type checking rules"
authors = [
    {name = "daviddoingthingsright",email = "daviddoingthingsright@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
