[tool.poetry]
name = "shared-python-utils"
version = "0.1.0"
description = "Util package shared by my python projects. It consists of some base classes, my basic test framework, and a lot of linting/type checking rules"
authors = ["daviddoingthingsright <daviddoingthingsright@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "d_util", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.4"
python-dotenv = "1.2.1"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
# Code Quality / Linting / Formatting
pre-commit = "^4.0.1"      # Git hook manager to run checks before commits
ruff = "^0.12.2"           # Fast linter and formatter
mypy = "^1.14.0"           # Static type checker for Python

# Testing
pytest = "^8.3.4"          # Testing framework
pytest-mock = "^3.14.0"    # Plugin to simplify mocking with pytest
pytest-cov = "^6.0.0"      # Coverage reporting for pytest
freezegun = "^1.5.1"       # Time-freezing library for reliable datetime testing
pytz = "^2025.2"           # Timezone library, used in a test case

# Profiling / Visualization / Analysis
tuna = "^0.5.11"           # GUI tool to visualize profiling results
pydeps = "^3.0.0"          # Visualizes Python module dependencies

# Interactive Development / Notebooks
jupyter = "^1.1.1"         # Jupyter Notebook and lab support for interactive development



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.pytest.ini_options]
addopts = "-ra --strict-markers -m 'not integration'"
python_files = ["test_*.py"]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration (excluded by default)",
]



[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]



[tool.mypy]
plugins = ["pydantic.mypy"]
disable_error_code = [
    "import-untyped",
    "no-any-return",
]
show_error_codes = true
pretty = true
strict = true
# exclude unit tests from strict type checking
exclude = "tests"



[tool.ruff]
line-length = 200
fix = true
show-fixes = true
exclude = ["tests"]


[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort (import sorting)
  "UP",   # pyupgrade (modern syntax)
  "ANN",  # flake8-annotations (type annotations)
  "ASYNC", # flake8-async (async/await best practices)
  "B",    # flake8-bugbear (runtime bugs & performance)
  "C4",    # flake8-comprehensions (list/set/dict comprehension improvements)
  "ICN", # flake8-import-conventions (import conventions)
  "ISC",  #  flake8-implicit-str-concat (implicit string concatenation)
  "PT",   # flake8-pytest-style (if you use pytest)
  "PTH",  # flake8-use-pathlib (prefer pathlib over os.path)
  "Q",    # flake8-quotes (string quote consistency)
  # "S",    # flake8-bandit (security issues)
  "TID",  # flake8-tidy-imports
  # "ARG",  # flake8-unused-arguments
  # "DTZ",  # flake8-datetimez
]

ignore = [
  "E712", # E712 avoid equality comparisons to True
  "ANN401" # ANN401 Dynamically typed expressions (typing.Any) are disallowed in `value`
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"